fix blog margin bug on mobile

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -342,6 +342,7 @@
 
 	.benefits__right {
 		min-width: 0;
+		max-width: 34.6rem;
 	}
 
 	.books-section {
